--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "mocha",
-		"build": "webpack --mode production",
+		"build": "webpack --mode development",
 		"start": "node bin/www"
 	},
 	"repository": {
@@ -21,6 +21,7 @@
 	"dependencies": {
 		"express": "^4.16.4",
 		"mongoose": "^5.3.11",
+		"prop-types": "^15.6.2",
 		"react": "^16.6.1",
 		"react-dom": "^16.6.1",
 		"react-redux": "^5.1.0",
