--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
 	},
 	"homepage": "https://github.com/mitarskoro-endava/wptut#readme",
 	"dependencies": {
+		"connect-mongo": "^2.0.2",
 		"express": "^4.16.4",
+		"express-session": "^1.15.6",
 		"mongoose": "^5.3.11",
 		"prop-types": "^15.6.2",
 		"react": "^16.6.1",
